# HD2D-like-Game-Engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  clear.bat  helloworld.cpp  helloworld.h  run.bat
engine/: CMakeLists.txt  helloworld.cpp  helloworld.h
engine/asset/models/nijika/: nijika.FBX
engine/asset/models/swordMaid/: Read me.txt  sword.pmx  swordMaid.pmx
engine/configs/deployment/: Hd2dEditor.ini
engine/configs/development/: Hd2dEditor.ini
engine/shader/: CMakeLists.txt  colors.fs  colors.vs  light_cube.fs  lighting_shader.fs  quad.fs  quad.vs
engine/shaders/: blending.fs  colors.fs  colors.vs  edge.vs  floor.fs  floor.vs  grass.fs  grass.vs  light_cube.vs  lighting_shader.fs  lighting_shader.vs  mirror.vs  model_loading.vs  normal_visualization.gs  normal_visualization.vs  shadow_map.fs  shadow_map.vs  skybox.vs
engine/source/editor/: CMakeLists.txt
engine/source/editor/include/: camera.h  config_manager.h  input.h  mesh.h  model.h  shader.h  texture2d.h
engine/source/editor/resource/CPT/: container.cpt  face.cpt  pocky1.cpt  pocky2.cpt
engine/source/editor/resource/grassGod/: grassGod.pmx
engine/source/editor/source/: camera.cpp  config_manager.cpp  input.cpp  main.cpp  mesh.cpp  model.cpp  shader.cpp  texture2d.cpp
