CMAKE_MINIMUM_REQUIRED(VERSION 3.19 FATAL_ERROR)

PROJECT(HD2D VERSION 0.1.0)

SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(BUILD_SHARED_LIBS OFF)

SET(HD2D_ROOT_DIR "${CMAKE_CURRENT_SOURCE_DIR}")
SET(CMAKE_INSTALL_PREFIX "${HD2D_ROOT_DIR}/bin")
SET(BINARY_ROOT_DIR "${CMAKE_INSTALL_PREFIX}/")

ADD_SUBDIRECTORY(engine)