CMAKE_MINIMUM_REQUIRED(VERSION 3.19 FATAL_ERROR)

PROJECT(Hd2dGameEngine)

SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(BUILD_SHARED_LIBS OFF)

SET(ENGINE_ROOT_DIR "${CMAKE_CURRENT_SOURCE_DIR}")
SET(CMAKE_INSTALL_PREFIX "${ENGINE_ROOT_DIR}/bin")
SET(BINARY_ROOT_DIR "${CMAKE_INSTALL_PREFIX}/")

ADD_SUBDIRECTORY(engine)