SET(TARGET_NAME hd2dEditor)

FILE(GLOB EDITOR_HEADERS CONFIGURE_DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/include/*.h)
FILE(GLOB EDITOR_SOURCES CONFIGURE_DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/source/*.cpp)

SOURCE_GROUP(TREE "${CMAKE_CURRENT_SOURCE_DIR}" FILES ${EDITOR_HEADERS} ${EDITOR_SOURCES})

ADD_EXECUTABLE(${TARGET_NAME} ${EDITOR_HEADERS} ${EDITOR_SOURCES})

SET_TARGET_PROPERTIES(${TARGET_NAME} PROPERTIES CXX_STANDARD 17 OUTPUT_NAME "Hd2dEditor")
SET_TARGET_PROPERTIES(${TARGET_NAME} PROPERTIES FOLDER "Engine")

TARGET_COMPILE_OPTIONS(${TARGET_NAME} PUBLIC "$<$<COMPILE_LANG_AND_ID:CXX,MSVC>:/WX->")

# Link dependencies    
TARGET_LINK_LIBRARIES(${TARGET_NAME} PRIVATE stb)
TARGET_LINK_LIBRARIES(${TARGET_NAME} PUBLIC glm)
TARGET_LINK_LIBRARIES(${TARGET_NAME} PUBLIC glfw)
TARGET_LINK_LIBRARIES(${TARGET_NAME} PUBLIC glad)

target_include_directories(
  ${TARGET_NAME} 
  PUBLIC $<BUILD_INTERFACE:${ENGINE_ROOT_DIR}/source>
  $<INSTALL_INTERFACE:include/${TARGET_NAME}-${PROJECT_VERSION}>
)